@@ -272,6 +272,22 @@ class wxSystemAppearance
 {
 public:
     /**
+        Return true if the applications on this system use dark theme by
+        default.
+
+        This function returns @true if dark mode is enabled for the
+        applications system-wide, even if it's not enabled for this particular
+        application.
+
+        Note that for non-MSW platforms this is currently the same as IsDark(),
+        but under MSW these two functions can return different values as dark
+        mode requires to opt-in into it specifically.
+
+        @since 3.3.0
+     */
+    bool AreAppsDark() const;
+
+    /**
         Return the name if available or empty string otherwise.
 
         This is currently only implemented for macOS and returns
@@ -291,8 +307,22 @@ public:
         the other applications on the system, so under MSW, for example, it
         will return @false even if dark mode is used system-wide unless the
         application opted in using dark mode using wxApp::MSWEnableDarkMode().
+        You can use IsSystemDark() or AreAppsDark() to check if the system is
+        using dark mode by default.
      */
     bool IsDark() const;
+
+    /**
+        Return true if the system UI uses dark theme.
+
+        This is the same as AreAppsDark() on the non-MSW platforms, but can be
+        different from the other function under MSW as it is possible to
+        configure default "Windows mode" and "app mode" to use different colour
+        schemes under Windows.
+
+        @since 3.3.0
+     */
+    bool IsSystemDark() const;
 
     /**
         Return true if the default window background is significantly darker
