@@ -68,6 +68,21 @@ void wxSystemSettings::SetScreenType( wxSystemScreenType screen )
 // Trivial wxSystemAppearance implementation
 // ----------------------------------------------------------------------------
 
+// wxMSW has its own implementation of these functions.
+#if !defined(__WXMSW__)
+
+bool wxSystemAppearance::AreAppsDark() const
+{
+    return IsDark();
+}
+
+bool wxSystemAppearance::IsSystemDark() const
+{
+    return IsDark();
+}
+
+#endif // !__WXMSW__
+
 #if !defined(__WXOSX__)
 
 wxString wxSystemAppearance::GetName() const
