@@ -33,6 +33,7 @@
 #include "wx/msw/missing.h" // for SM_CXCURSOR, SM_CYCURSOR, SM_TABLETPC
 #include "wx/msw/private/darkmode.h"
 #include "wx/msw/private/metrics.h"
+#include "wx/msw/registry.h"
 
 #include "wx/fontutil.h"
 #include "wx/fontenum.h"
@@ -369,6 +370,32 @@ extern wxFont wxGetCCDefaultFont()
 
 #endif // wxUSE_LISTCTRL || wxUSE_TREECTRL
 
+// There is no official API for determining whether dark mode is being used,
+// but HKCU\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize
+// contains AppsUseLightTheme and SystemUsesLightTheme values determining
+// whether the applications/system use light or dark mode, so use them.
+//
+// Adapted from https://stackoverflow.com/a/51336913/15275 ("How to detect
+// Windows 10 light/dark mode in Win32 application?").
+namespace
+{
+
+// Return false unless we are sure we're using the dark mode.
+bool IsUsingDarkTheme(const wxString& forWhat)
+{
+    wxRegKey rk(wxRegKey::HKCU, "Software\\Microsoft\\Windows\\CurrentVersion\\Themes\\Personalize");
+    if ( rk.Exists() && rk.HasValue(forWhat) )
+    {
+        long value = -1;
+        if ( rk.QueryValue(forWhat, &value) )
+            return value <= 0;
+    }
+
+    return false;
+}
+
+} // anonymous namespace
+
 bool wxSystemAppearance::IsDark() const
 {
     // If the application opted in using dark mode, use the undocumented API
@@ -380,4 +407,14 @@ bool wxSystemAppearance::IsDark() const
     // dark mode for the other applications here, what matters is whether this
     // application itself uses dark colour schema or not.
     return IsUsingDarkBackground();
+}
+
+bool wxSystemAppearance::AreAppsDark() const
+{
+    return IsUsingDarkTheme("AppsUseLightTheme");
+}
+
+bool wxSystemAppearance::IsSystemDark() const
+{
+    return IsUsingDarkTheme("SystemUsesLightTheme");
 }
